2008-11-05  Dan Williams  <dcbw@redhat.com>

	Clear up ambiguity reported in bgo #559402

	* src/connection-editor/page-ip4.c
		- (populate_ui): show netmask, not prefix
		- (parse_netmask): slightly stricter prefix checking; use inet_pton

	* src/connection-editor/ip4-routes-dialog.c
		- (ip4_routes_dialog_new): show netmask, not prefix
		- (ip4_routes_dialog_update_setting): stricter validation of route options

2008-11-03  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
	  src/applet.c
	  src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/nma-gconf-connection.c
	  src/vpn-password-dialog.c
		- Use detailed NMSettings errors

2008-11-03  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
		- (create_info_label, create_info_label_security, info_dialog_add_page):
			Make info items selectable (bgo #558975)

2008-11-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ppp.c
		- (use_mppe_toggled_cb, populate_ui): ensure changes get saved
			(bgo #559077)

2008-11-02  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.0-rc1

2008-11-02  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (find_active_device): return the active connection object instead of
			just the active connection's specific object
		- (applet_settings_new_secrets_requested_cb): pass the active connection
			to the device subclasses

	* src/applet-device-wired.c
	  src/applet-device-wifi.c
	  src/applet-device-gsm.c
	  src/applet-device-cdma.c
		- Attach any secrets dialogs to the active connection object, such that
			when the active connection object goes away the dialog also gets
			closed

2008-10-31  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (update): actually save private values like cert and key paths

	* src/connection-editor/nm-connection-list.c
		- (add_connection): fill certificate and private key items before adding